tests/b4mad-racing-tls-route.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    cert-manager.io/common-name: paddock-test-2.b4mad.racing
  name: paddock-test-2.b4mad.racing
spec:
  ingressClassName: openshift-default
  rules:
    - host: paddock-test-2.b4mad.racing
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: non-existing-test
                port:
                  number: 80
  tls:
    - hosts:
        - paddock-test-2.b4mad.racing
      secretName: paddock-test-2.b4mad.racing
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: non-existing-test
  name: non-existing-test
spec:
  selector:
    app: non-existing-test
  ports:
    - name: main
      port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
